roles/addons/mysql/files/mysql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-nodeport
  namespace: mysql
  labels:
    app: mysql
spec:
  type: NodePort
  ports:
    - nodePort: 30036
      port: 3036
      name: mysql
  selector:
    app: mysql
    tier: frontend
