roles/addons/mysql/files/mysql-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysql
  namespace: mysql
  labels:
    app.kubernetes.io/name: ingress
    app: mysql
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mysql.silverbackwebapps.com
      secretName: letsencrypt-prod
  rules:
    - host: mysql.silverbackwebapps.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mysql
              servicePort: 3306
